[tool.poetry]
name = "unlockpdf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
pikepdf = "^8.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
